--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,1 +1,17 @@
-{{{body}}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/style.css">
+
+    <title>Document</title>
+</head>
+<body>
+
+<div class="container">
+      {{{body}}}
+    </div>
+
+</body>
+
+</html>
