added map and pin points

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="style.css">
-
     <title>Up-Cycle</title>
 </head>
 
 <body>
     <div class="container">
         <div class="header">
+            <form action="/home" method="POST"></form>
             <h1>UP-CYCLE</h1>
             <p class="slogan">Re-use , Reduce, Recycle</p>
             <nav>
@@ -25,23 +24,18 @@
         <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officia repellat itaque autem iure perferendis cumque in tempora ullam commodi quod odit dicta deserunt, sunt tempore quos consequatur optio. Numquam.</p>
 
         <div class="slides">
-            <img src="../recycle1.jpg" alt="what can be recycled">
-            <button class="btn">What can I recycle?</button>
+            <img src="recycle1.jpg" alt="what can be recycled">
+            <button class="btn" name="link"<a href="/form">can I recycle and how much can i get?</a></button>
             <br>
         </div>
-        <!-- <div class="slides">
-            <img src="recycle1.jpg" alt="what can be recycled">
-            <button class="btn"></button>
-
-        </div> -->
         <div class="slides">
-            <img src="../map.jpg" alt="map of cape town">
-            <button class="btn" name="link"><a href="map.html">Drop-off Points</a></button>
+            <img src="map.jpg" alt="map of cape town">
+            <button class="btn" name="link"><a href="/drop-off-sites">Drop-off Points</a></button>
         </div>
 
         <div class="slides">
-            <img src="../recycle2.jpg" alt="how recycling helps">
-            <button class="btn">How recycling helps</button>
+            <img src="recycle2.jpg" alt="how recycling helps">
+            <button class="btn" name="link"><a href="/tips">Tips on how to recycle and how it helps</a></button>
         </div>
 
 
