added about and contact route

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,10 +14,10 @@
             <h1>UP-CYCLE</h1>
             <p class="slogan">Re-use , Reduce, Recycle</p>
             <nav>
-                <h3>Home</h3>
+                <h2>Home</h2>
                 <ul>
-                    <li><a href="about">About</a></li>
-                    <li><a href="contact">Contact Us</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
