--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,8 +27,7 @@
 
         <div class="slides">
             <img src="/images/recycle1.jpg" alt="what can be recycled">
-            <button class="btn" name="link" <a href="/form">can I recycle and how much can i get?</a></button>
-            <br>
+            <button class="btn" name="link" <a href="/form">what can I recycle and how much can i get?</a></button>
         </div>
         <div class="slides">
             <img src="/images/map.jpg" alt="map of cape town">
@@ -37,7 +36,7 @@
 
         <div class="slides">
             <img src="/images/recycle2.jpg" alt="how recycling helps">
-            <button class="btn" name="link"><a href="/tips">Tips on how to recycle and how it helps</a></button>
+            <button class="btn" name="link"><a href="/insights">Tips on how to recycle and how it helps</a></button>
         </div>
 
 </body>
