--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -39,26 +39,28 @@
 <form action="/qtyForm" method="POST">
 
 <div>
-Paper_______ <input type="text" name="Paper" placeholder="enter quantity" class="qtyEntered" value="{{qty.Paper}}">
+Paper <input type="text" name="Paper" placeholder="enter quantity in Kgs" class="qtyEntered" value="{{qty.Paper}}">
 </div>
 <div>
-Cardboard__ <input type="text" name="Cardboard" placeholder="enter quantity" class="qtyEntered" value="{{qty.Cardboard}}">
+Cardboard <input type="text" name="Cardboard" placeholder="enter quantity in Kgs" class="qtyEntered" value="{{qty.Cardboard}}">
 </div>
 <div>
-Glass _______ <input type="text" name="Glass" placeholder="enter quantity" class="qtyEntered" value="{{qty.Glass}}">
+Glass <input type="text" name="Glass" placeholder="enter quantity in Kgs" class="qtyEntered" value="{{qty.Glass}}">
 </div>
 <div>
-Metal _______ <input type="text" name="Metal" placeholder="enter quantity" class="qtyEntered" value="{{qty.Metal}}">
+Metal <input type="text" name="Metal" placeholder="enter quantity in Kgs" class="qtyEntered" value="{{qty.Metal}}">
 </div>
 <div>
-Cans ________ <input type="text" name="Cans" placeholder="enter quantity" class="qtyEntered" value="{{qty.Cans}}">
+Cans <input type="text" name="Cans" placeholder="enter quantity in Kgs" class="qtyEntered" value="{{qty.Cans}}">
+</div>
+
+<div>
+    <p>Estimated Total R{{total}}</p>
 </div>
 
  <button class="submitBtn" type="submit" >Submit form</button>
 </form>
 
-<form action="/total" method="POST">
 <div>
-    <p>Estimated Total R____{{total}}</p>
+       <a href="/table">Tips</a>
 </div>
-</form>
