added about and contact us info

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -7,14 +7,21 @@
 </head>
 
 <body>
-    <div class="about">
         <h1>UP-CYCLE</h1>
-            <h2 class="home"> <a href="/">Home</a></h2>
-
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis est soluta nisi quas a rem, quis voluptatum esse,
-     enim neque cum corporis reiciendis molestias, atque nam in beatae placeat ea.
-     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum impedit doloremque voluptatem ab, sint, cupiditate
-      maiores doloribus libero expedita aliquid sequi necessitatibus facilis. Possimus error tempora in id ipsam autem?
+       <button class="home"><a href="/">Home</a></button> 
+    <div class="about">
+        <h2>About Us</h2>
+    <p> We at Up-Cycle strongly believe in the benefits that recycling has on our beautiful planet, but it order to make a big difference
+        we have to start small. We hope to mostly impact the lives of people who make a living off recycling or even those who knew nothing about it by simply
+        giving them everything they need to know in one place.
+       <h4>This webapp allows you to:</h4>  
+        <ul>
+            <li>Find which items are recyclable</li>
+            <li>An estimate in Rands for your recyclables</li>
+            <li>Where you can drop-off those recyclables to get cash</li>
+            <li>Tips on how to recyle</li>
+            <li>How recycling helps the environment</li>
+        </ul> 
      </p>
     </div>
 </body>
