--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+body {
+    /* background: rgb(43, 218, 54);
+    background: radial-gradient(circle, rgba(43, 218, 54, 1) 0%, rgba(148, 187, 233, 0) 100%); */
+}
+
 nav {
     position: absolute;
     top: 0;
@@ -14,8 +19,12 @@ nav {
 
 nav li {
     display: inline-block;
-    padding-right: 10px;
-    padding-left: 10px;
+    padding: 1em;
+    /* padding-right: 10px;
+    padding-left: 10px; */
+    border: 1px solid #000000;
+    border-radius: 1em;
+    background-color: #009900;
 }
 
 nav li span {
@@ -30,11 +39,27 @@ li a {
 }
 
 ul {
-    list-style: none;
+    list-style: circle;
 }
 
 h1 {
     text-align: center;
+}
+
+.home {
+    padding: 1em;
+    background-color: #009900;
+    border-radius: 1em;
+}
+
+.btn a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.home a {
+    text-decoration: none;
+    color: #000000;
 }
 
 .slogan {
@@ -70,16 +95,90 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    background-color: #555;
-    color: white;
+    background-color: #808080;
+    color: #ffffff;
     font-size: 16px;
     padding: 12px 24px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
     text-align: center;
+    opacity: 0.6;
 }
 
 .slides .btn:hover {
-    background-color: black;
+    background-color: #009900;
+}
+
+.contact {
+    position: absolute;
+    color: black;
+    width: 99%;
+    height: 32rem;
+    border: black 1px solid;
+    background-color: ;
+}
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-60%, -130%);
+    text-align: center;
+    margin: 5em;
+}
+
+.material-icons {
+    padding: 0.5em;
+    width: 2em;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 0.5em;
+}
+
+.material-icons:hover {
+    opacity: 0.7;
+}
+
+.icon {
+    background: #ff4d4d;
+    color: white;
+}
+
+.fa {
+    padding: 0.5em;
+    width: 2em;
+    text-align: center;
+    text-decoration: none;
+    /* margin: 5px 2px; */
+    border-radius: 0.5em;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-instagram {
+    background: rgb(250, 243, 0);
+    background: linear-gradient(90deg, rgba(250, 243, 0, 1) 0%, rgba(253, 59, 29, 1) 47%, rgba(252, 69, 232, 1) 100%);
+    color: white;
+}
+
+.fa-whatsapp {
+    background: #00ff00;
+    color: white;
+}
+
+.home {
+    color: black;
 }
