--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,23 +11,26 @@
     <div class="container">
         <div class="header">
             <form action="/home" method="POST"></form>
-            <h1>UP-CYCLE</h1>
+            <h1>Up-Cycle</h1>
             <p class="slogan">Re-use , Reduce, Recycle</p>
             <nav>
-                <h2>Home</h2>
+       <button class="home"><a href="/">Home</a></button> 
                 <ul>
                     <li><a href="/about">About</a></li>
                     <li><a href="/contact">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
-        <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officia repellat itaque
+        <br>
+        <br>
+        <br>
+        {{!-- <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officia repellat itaque
             autem iure perferendis cumque in tempora ullam commodi quod odit dicta deserunt, sunt tempore quos
-            consequatur optio. Numquam.</p>
+</p> --}}
 
         <div class="slides">
             <img src="/images/recycle1.jpg" alt="what can be recycled">
-            <button class="btn" name="link" <a href="/form">What can I recycle and how much can i get?</a></button>
+            <button class="btn" name="link"><a href="/form">What can I recycle and how much can i get?</a></button>
         </div>
         <div class="slides">
             <img src="/images/map.jpg" alt="map of cape town">
