--- a/views/insights.handlebars
+++ b/views/insights.handlebars
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto minima quia tempore porro cupiditate iusto quidem sed optio sapiente similique 
+    aliquid expedita, animi quam eos nam error inventore dolor ullam.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi animi quisquam impedit provident, deserunt veritatis fuga natus distinctio neque a odio,
+     veniam qui doloremque obcaecati voluptates accusantium, ipsa sit? Illo.
+     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati laudantium nam adipisci non vero corrupti pariatur praesentium ea distinctio facere, optio dignissimos cumque, 
+     deleniti voluptates veniam dolore harum consectetur excepturi?
 </body>
 </html>
