added styling and info to routes

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -7,13 +7,24 @@
 </head>
 
 <body>
-    <div class="contact">
-    <h1>UP-CYCLE</h1>
-        <h2 class="home"> <a href="/">Home</a></h2>
+                <h1 class="heading">UP-CYCLE</h1>
+            <p class="slogan">Re-use , Reduce, Recycle</p>
 
-<h2>Get in touch </h2>
+       <button class="home"><a href="/">Home</a></button> 
+    <div clas="contact">
+<div class="center">
+<h2>We'd love to hear from you </h2>
+<p>Whether you have any questions, a suggestion or simply want to know more? Our team is here to help </p>
+<div class="number">    
+    <a href="mailto:mecayleg@gmail.com"><i class="material-icons icon" style="font-size: 20px">email</i></a>
+   <a href="#" class="fa fa-facebook" style="font-size: 20px;"></a>
+   <a href="#" class="fa fa-twitter" style="font-size: 20px;"></a>
+   <a href="#" class="fa fa-instagram" style="font-size: 20px;"></a>
+    <a href="#" class="fa fa-whatsapp" style="font-size: 20px;"></a>
 
-    </div>
+</div>
+</div>
+</div>
 
 </body>
 
