--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,3 +1,44 @@
+         <h1 class="heading">UP-CYCLE</h1>
+        <p class="slogan">Re-use , Reduce, Recycle</p>
+
+  <button class="home"><a href="/">Home</a></button>
+  <div class="recyclables">
+<h4>What can be recycled</h4>
+<div class="paper">
+  <h5>Paper</h5>
+  <p>When it comes to office paper, magazines, newspaper or color paper recycling, there is a wide range of 
+    paper materials that can be diverted from landfill.</p>
+</div>
+
+<div class="cardboard">
+  <h5>Cardboard</h5>
+  <p>Be it used boxes, cereal or cardboard packaging all of these can be recycled.</p>
+</div>
+
+<div class="plastic">
+  <h5>Plastic</h5>
+  Plastic materials are widely recycled and include water and cool drink bottles, cleaning 
+  agent bottles, crates, pallets and bins, bubble wrap, yoghurt tubs, margarine tubs, ice cream containers and bottle caps
+</div>
+
+<div class="glass">
+  <h5>Glass</h5>
+<p>Glass recycling in South Africa is on the increase. Any clean glass bottles and glass jars</p>
+</div>
+
+<div class="metal">
+<h5>Metal</h5>
+<p>Scrap metal is one of the most valuable products you can recycle. The general rule is a product needs to be at
+   least 50 percent metal from appliances to batteries to clothes hangers</p>
+</div>
+
+<div class="cans">
+  <h5>Cans</h5>
+  <p>Tin and can recycling in South Africa is one of the areas of waste management that is on the increase,
+     especially in households. Any aluminium and beverage cans</p>
+</div>
+  </div>
+
 <div>
   <h4>Select Materials For Recycling</h4>
 </div>
