--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,19 +11,18 @@
     <div class="container">
         <div class="header">
             <form action="/home" method="POST"></form>
-            <h1>UP-CYCLE</h1>
+            <h1 class="heading">UP-CYCLE</h1>
             <p class="slogan">Re-use , Reduce, Recycle</p>
             <nav>
-                <h2>Home</h2>
+       <button class="home"><a href="/">Home</a></button> 
                 <ul>
                     <li><a href="/about">About</a></li>
                     <li><a href="/contact">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
-        <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam officia repellat itaque
-            autem iure perferendis cumque in tempora ullam commodi quod odit dicta deserunt, sunt tempore quos
-            consequatur optio. Numquam.</p>
+        <div class="about">If you’re not already recycling, find out more about how easy it is and how you can really make a 
+            difference. For those who already recycle, discover the positive effect your recycling efforts are making and find out what else you may be able to do.</div>
 
         <div class="slides">
             <img src="/images/recycle1.jpg" alt="what can be recycled">
