--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,14 @@
+.heading {
+    font-family: 'Bangers', cursive;
+    font-size: 3em;
+    color: #7dcea0;
+}
+
+.slogan {
+    font-weight: bolder;
+    font-size: 1.5em;
+}
+
 nav {
     position: absolute;
     top: 0;
@@ -14,8 +25,12 @@ nav {
 
 nav li {
     display: inline-block;
-    padding-right: 10px;
-    padding-left: 10px;
+    padding: 1em;
+    /* padding-right: 10px;
+    padding-left: 10px; */
+    border: 1px solid #7dcea0;
+    border-radius: 1em;
+    background-color: #7dcea0;
 }
 
 nav li span {
@@ -30,11 +45,33 @@ li a {
 }
 
 ul {
-    list-style: none;
+    list-style: circle;
 }
 
 h1 {
     text-align: center;
+}
+
+.home {
+    padding: 0.5em;
+    background-color: #808080;
+    border-radius: 1em;
+    font-size: 1em;
+    opacity: 0.6;
+}
+
+.home:hover {
+    background-color: #009900;
+}
+
+.btn a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.home a {
+    text-decoration: none;
+    color: #000000;
 }
 
 .slogan {
@@ -42,7 +79,12 @@ h1 {
 }
 
 .about {
-    margin: 5em;
+    margin-left: 15em;
+    margin-top: 5em;
+    /* border: black 0.5px solid; */
+    padding: 1em;
+    width: 50em;
+    text-align: center;
 }
 
 
@@ -62,6 +104,7 @@ h1 {
     width: 100%;
     height: 20em;
     border-radius: 5px;
+    margin: 1em;
 }
 
 .slides .btn {
@@ -70,16 +113,235 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    background-color: #555;
-    color: white;
+    background-color: #808080;
+    color: #ffffff;
     font-size: 16px;
     padding: 12px 24px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
     text-align: center;
+    opacity: 0.6;
 }
 
 .slides .btn:hover {
-    background-color: black;
+    background-color: #009900;
+}
+
+.contact {
+    position: absolute;
+    color: black;
+    width: 99%;
+    height: 32rem;
+    border: black 1px solid;
+    /* background-color: ; */
+}
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-60%, -130%);
+    text-align: center;
+    margin: 5em;
+}
+
+.material-icons {
+    padding: 0.5em;
+    width: 2em;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 0.5em;
+}
+
+.material-icons:hover {
+    opacity: 0.7;
+}
+
+.icon {
+    background: #ff4d4d;
+    color: white;
+}
+
+.fa {
+    padding: 0.5em;
+    width: 2em;
+    text-align: center;
+    text-decoration: none;
+    /* margin: 5px 2px; */
+    border-radius: 0.5em;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-instagram {
+    background: rgb(250, 243, 0);
+    background: linear-gradient(90deg, rgba(250, 243, 0, 1) 0%, rgba(253, 59, 29, 1) 47%, rgba(252, 69, 232, 1) 100%);
+    color: white;
+}
+
+.fa-whatsapp {
+    background: #00ff00;
+    color: white;
+}
+
+.home {
+    color: black;
+}
+
+* {
+    box-sizing: border-box
+}
+
+
+/* body {
+    font-family: Verdana, sans-serif;
+    margin: 0
+} */
+
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+}
+
+
+/* Slideshow container */
+
+.slideshow-container {
+    width: 30em;
+    position: relative;
+    margin: auto;
+}
+
+
+/* Next & previous buttons */
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+
+/* Position the "next button" to the right */
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+
+/* On hover, add a black background color with a little bit see-through */
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+/* Caption text */
+
+.text {
+    color: #000000;
+    font-size: 1.5em;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+    font-weight: bolder;
+}
+
+
+/* Number text (1/3 etc) */
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+
+/* The dots/bullets/indicators */
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+
+/* Fading animation */
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+
+/* On smaller screens, decrease text size */
+
+@media only screen and (max-width: 300px) {
+    .prev,
+    .next,
+    .text {
+        font-size: 11px
+    }
 }
