--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -7,9 +7,13 @@
 </head>
 
 <body>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                </ul>
+            </nav>
             <h1 class="heading">UP-CYCLE</h1>
             <p class="slogan">Re-use , Reduce, Recycle</p>
-       <button class="home"><a href="/">Home</a></button> 
     <div class="about">
         <h2>About Us</h2>
     <p> We at Up-Cycle strongly believe in the benefits that recycling has on our beautiful planet, but it order to make a big difference
