--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,7 +1,11 @@
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                </ul>
+            </nav>
 <h1 class="heading">UP-CYCLE</h1>
 <p class="slogan">Re-use , Reduce, Recycle</p>
 
-<button class="home"><a href="/">Home</a></button>
 <br>
 <br>
 <div class="recyclables">
