--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,15 +11,15 @@
     <div class="container">
         <div class="header">
             <form action="/home" method="POST"></form>
-            <h1 class="heading">UP-CYCLE</h1>
-            <p class="slogan">Re-use , Reduce, Recycle</p>
             <nav>
-       <button class="home"><a href="/">Home</a></button> 
                 <ul>
+                    <li><a href="/">Home</a></li>
                     <li><a href="/about">About</a></li>
                     <li><a href="/contact">Contact Us</a></li>
                 </ul>
             </nav>
+            <h1 class="heading">UP-CYCLE</h1>
+            <p class="slogan">Re-use , Reduce, Recycle</p>
         </div>
         <div class="about">If you’re not already recycling, find out more about how easy it is and how you can really make a 
             difference. For those who already recycle, discover the positive effect your recycling efforts are making and find out what else you may be able to do.</div>
