--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -7,10 +7,14 @@
 </head>
 
 <body>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                </ul>
+            </nav>
                 <h1 class="heading">UP-CYCLE</h1>
             <p class="slogan">Re-use , Reduce, Recycle</p>
 
-       <button class="home"><a href="/">Home</a></button> 
     <div clas="contact">
 <div class="center">
 <h2>We'd love to hear from you </h2>
