--- a/views/insights.handlebars
+++ b/views/insights.handlebars
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                </ul>
+            </nav>
          <h1 class="heading">UP-CYCLE</h1>
         <p class="slogan">Re-use , Reduce, Recycle</p>
 
-    <button class="home"><a href="/">Home</a></button>
 
 <div class="slideshow-container">
 
